--- a/VeternaryProject/Views/Home/Index.cshtml
+++ b/VeternaryProject/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container" >
+<div class="container">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -40,13 +40,17 @@
     <br />
     <div class="row">
         <div class="col-md-5 img-thumbnail">
-            <img src="~/Images/puppy-yawning-veterinary-hospital-and-surgery.jpg" class="img-responsive" style="height:360px" />
+            <a href="~/Home/About">
+                <img src="~/Images/puppy-yawning-veterinary-hospital-and-surgery.jpg" class="img-responsive" style="height:360px" />
+            </a>
             <p class="text-center" style=" font-size:x-large; color: darkblue">
                 About us
             </p>
         </div>
         <div class="col-md-5 img-thumbnail">
-            <img src="~/Images/surgeon-with-dog-veterinary-hospital-and-surgery.jpg" class="img-responsive" style="height:360px" />
+            <a href="~/Home/Advice">
+                <img src="~/Images/surgeon-with-dog-veterinary-hospital-and-surgery.jpg" class="img-responsive" style="height:360px" />
+            </a>
             <p class="text-center" style=" font-size:x-large; color: darkblue">
                 Pet advice
             </p>
@@ -60,7 +64,7 @@
             <div class="col-md-12">
                 <div class="row ">
                     <a href="~/Appointment/AppointmentRegistration">
-                    @*<a href="~/Views/Appointment/AppointmentRegistration.cshtml">*@
+                        @*<a href="~/Views/Appointment/AppointmentRegistration.cshtml">*@
                         <img src="~/Images/register.jpg" class="img-responsive center-block img-circle " style="width : 100%;height:30%;" />
                     </a>
                 </div>
